packagelon com.twittelonr.cr_mixelonr.similarity_elonnginelon

import com.twittelonr.cr_mixelonr.modelonl.SimilarityelonnginelonInfo
import com.twittelonr.cr_mixelonr.modelonl.SourcelonInfo
import com.twittelonr.cr_mixelonr.modelonl.TwelonelontWithScorelon
import com.twittelonr.cr_mixelonr.param.ConsumelonrBaselondWalsParams
import com.twittelonr.cr_mixelonr.similarity_elonnginelon.ConsumelonrBaselondWalsSimilarityelonnginelon.Quelonry
import com.twittelonr.cr_mixelonr.thriftscala.SimilarityelonnginelonTypelon
import com.twittelonr.cr_mixelonr.thriftscala.SourcelonTypelon
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.simclustelonrs_v2.thriftscala.IntelonrnalId
import com.twittelonr.storelonhaus.RelonadablelonStorelon
import com.twittelonr.timelonlinelons.configapi
import com.twittelonr.util.Futurelon
import io.grpc.ManagelondChannelonl
import telonnsorflow.selonrving.Prelondict.PrelondictRelonquelonst
import telonnsorflow.selonrving.Prelondict.PrelondictRelonsponselon
import telonnsorflow.selonrving.PrelondictionSelonrvicelonGrpc
import org.telonnsorflow.elonxamplelon.Felonaturelon
import org.telonnsorflow.elonxamplelon.Int64List
import org.telonnsorflow.elonxamplelon.FloatList
import org.telonnsorflow.elonxamplelon.Felonaturelons
import org.telonnsorflow.elonxamplelon.elonxamplelon
import telonnsorflow.selonrving.Modelonl
import org.telonnsorflow.framelonwork.TelonnsorProto
import org.telonnsorflow.framelonwork.DataTypelon
import org.telonnsorflow.framelonwork.TelonnsorShapelonProto
import com.twittelonr.finaglelon.grpc.FuturelonConvelonrtelonrs
import java.util.ArrayList
import java.lang
import com.twittelonr.util.Relonturn
import com.twittelonr.util.Throw
import java.util.concurrelonnt.ConcurrelonntHashMap
import scala.jdk.CollelonctionConvelonrtelonrs._

// Stats objelonct maintain a selont of stats that arelon speloncific to thelon Wals elonnginelon.
caselon class WalsStats(scopelon: String, scopelondStats: StatsReloncelonivelonr) {

  val relonquelonstStat = scopelondStats.scopelon(scopelon)
  val inputSignalSizelon = relonquelonstStat.stat("input_signal_sizelon")

  val latelonncy = relonquelonstStat.stat("latelonncy_ms")
  val latelonncyOnelonrror = relonquelonstStat.stat("elonrror_latelonncy_ms")
  val latelonncyOnSuccelonss = relonquelonstStat.stat("succelonss_latelonncy_ms")

  val relonquelonsts = relonquelonstStat.countelonr("relonquelonsts")
  val succelonss = relonquelonstStat.countelonr("succelonss")
  val failurelons = relonquelonstStat.scopelon("failurelons")

  delonf onFailurelon(t: Throwablelon, startTimelonMs: Long) {
    val duration = Systelonm.currelonntTimelonMillis() - startTimelonMs
    latelonncy.add(duration)
    latelonncyOnelonrror.add(duration)
    failurelons.countelonr(t.gelontClass.gelontNamelon).incr()
  }

  delonf onSuccelonss(startTimelonMs: Long) {
    val duration = Systelonm.currelonntTimelonMillis() - startTimelonMs
    latelonncy.add(duration)
    latelonncyOnSuccelonss.add(duration)
    succelonss.incr()
  }
}

// StatsMap maintains a mapping from Modelonl's input signaturelon to a stats reloncelonivelonr
// Thelon Wals modelonl suports multiplelon input signaturelon which can run diffelonrelonnt graphs intelonrnally and
// can havelon a diffelonrelonnt pelonrformancelon profilelon.
// Invoking StatsReloncelonivelonr.stat() on elonach relonquelonst can crelonatelon a nelonw stat objelonct and can belon elonxpelonnsivelon
// in pelonrformancelon critical paths.
objelonct WalsStatsMap {
  val mapping = nelonw ConcurrelonntHashMap[String, WalsStats]()

  delonf gelont(scopelon: String, scopelondStats: StatsReloncelonivelonr): WalsStats = {
    mapping.computelonIfAbselonnt(scopelon, (scopelon) => WalsStats(scopelon, scopelondStats))
  }
}

caselon class ConsumelonrBaselondWalsSimilarityelonnginelon(
  homelonNaviGRPCClielonnt: ManagelondChannelonl,
  adsFavelondNaviGRPCClielonnt: ManagelondChannelonl,
  adsMonelontizablelonNaviGRPCClielonnt: ManagelondChannelonl,
  statsReloncelonivelonr: StatsReloncelonivelonr)
    elonxtelonnds RelonadablelonStorelon[
      Quelonry,
      Selonq[TwelonelontWithScorelon]
    ] {

  ovelonrridelon delonf gelont(
    quelonry: ConsumelonrBaselondWalsSimilarityelonnginelon.Quelonry
  ): Futurelon[Option[Selonq[TwelonelontWithScorelon]]] = {
    val startTimelonMs = Systelonm.currelonntTimelonMillis()
    val stats =
      WalsStatsMap.gelont(
        quelonry.wilyNsNamelon + "/" + quelonry.modelonlSignaturelonNamelon,
        statsReloncelonivelonr.scopelon("NaviPrelondictionSelonrvicelon")
      )
    stats.relonquelonsts.incr()
    stats.inputSignalSizelon.add(quelonry.sourcelonIds.sizelon)
    try {
      // avoid infelonrelonncelon calls is sourcelon signals arelon elonmpty
      if (quelonry.sourcelonIds.iselonmpty) {
        Futurelon.valuelon(Somelon(Selonq.elonmpty))
      } elonlselon {
        val grpcClielonnt = quelonry.wilyNsNamelon match {
          caselon "navi-wals-reloncommelonndelond-twelonelonts-homelon-clielonnt" => homelonNaviGRPCClielonnt
          caselon "navi-wals-ads-favelond-twelonelonts" => adsFavelondNaviGRPCClielonnt
          caselon "navi-wals-ads-monelontizablelon-twelonelonts" => adsFavelondNaviGRPCClielonnt
          // delonfault to homelonNaviGRPCClielonnt
          caselon _ => homelonNaviGRPCClielonnt
        }
        val stub = PrelondictionSelonrvicelonGrpc.nelonwFuturelonStub(grpcClielonnt)
        val infelonrRelonquelonst = gelontModelonlInput(quelonry)

        FuturelonConvelonrtelonrs
          .RichListelonnablelonFuturelon(stub.prelondict(infelonrRelonquelonst)).toTwittelonr
          .transform {
            caselon Relonturn(relonsp) =>
              stats.onSuccelonss(startTimelonMs)
              Futurelon.valuelon(Somelon(gelontModelonlOutput(quelonry, relonsp)))
            caselon Throw(elon) =>
              stats.onFailurelon(elon, startTimelonMs)
              Futurelon.elonxcelonption(elon)
          }
      }
    } catch {
      caselon elon: Throwablelon => Futurelon.elonxcelonption(elon)
    }
  }

  delonf gelontFelonaturelonsForReloncommelonndations(quelonry: ConsumelonrBaselondWalsSimilarityelonnginelon.Quelonry): elonxamplelon = {
    val twelonelontIds = nelonw ArrayList[lang.Long]()
    val twelonelontFavelonWelonight = nelonw ArrayList[lang.Float]()

    quelonry.sourcelonIds.forelonach { sourcelonInfo =>
      val welonight = sourcelonInfo.sourcelonTypelon match {
        caselon SourcelonTypelon.TwelonelontFavoritelon | SourcelonTypelon.Relontwelonelont => 1.0f
        // currelonntly no-op - as welon do not gelont nelongativelon signals
        caselon SourcelonTypelon.TwelonelontDontLikelon | SourcelonTypelon.TwelonelontRelonport | SourcelonTypelon.AccountMutelon |
            SourcelonTypelon.AccountBlock =>
          0.0f
        caselon _ => 0.0f
      }
      sourcelonInfo.intelonrnalId match {
        caselon IntelonrnalId.TwelonelontId(twelonelontId) =>
          twelonelontIds.add(twelonelontId)
          twelonelontFavelonWelonight.add(welonight)
        caselon _ =>
          throw nelonw IllelongalArgumelonntelonxcelonption(
            s"Invalid IntelonrnalID - doelons not contain TwelonelontId for Sourcelon Signal: ${sourcelonInfo}")
      }
    }

    val twelonelontIdsFelonaturelon =
      Felonaturelon
        .nelonwBuildelonr().selontInt64List(
          Int64List
            .nelonwBuildelonr().addAllValuelon(twelonelontIds).build()
        ).build()

    val twelonelontWelonightsFelonaturelon = Felonaturelon
      .nelonwBuildelonr().selontFloatList(
        FloatList.nelonwBuildelonr().addAllValuelon(twelonelontFavelonWelonight).build()).build()

    val felonaturelons = Felonaturelons
      .nelonwBuildelonr()
      .putFelonaturelon("twelonelont_ids", twelonelontIdsFelonaturelon)
      .putFelonaturelon("twelonelont_welonights", twelonelontWelonightsFelonaturelon)
      .build()
    elonxamplelon.nelonwBuildelonr().selontFelonaturelons(felonaturelons).build()
  }

  delonf gelontModelonlInput(quelonry: ConsumelonrBaselondWalsSimilarityelonnginelon.Quelonry): PrelondictRelonquelonst = {
    val tfelonxamplelon = gelontFelonaturelonsForReloncommelonndations(quelonry)

    val infelonrelonncelonRelonquelonst = PrelondictRelonquelonst
      .nelonwBuildelonr()
      .selontModelonlSpelonc(
        Modelonl.ModelonlSpelonc
          .nelonwBuildelonr()
          .selontNamelon(quelonry.modelonlNamelon)
          .selontSignaturelonNamelon(quelonry.modelonlSignaturelonNamelon))
      .putInputs(
        quelonry.modelonlInputNamelon,
        TelonnsorProto
          .nelonwBuildelonr()
          .selontDtypelon(DataTypelon.DT_STRING)
          .selontTelonnsorShapelon(TelonnsorShapelonProto
            .nelonwBuildelonr()
            .addDim(TelonnsorShapelonProto.Dim.nelonwBuildelonr().selontSizelon(1)))
          .addStringVal(tfelonxamplelon.toBytelonString)
          .build()
      ).build()
    infelonrelonncelonRelonquelonst
  }

  delonf gelontModelonlOutput(quelonry: Quelonry, relonsponselon: PrelondictRelonsponselon): Selonq[TwelonelontWithScorelon] = {
    val outputNamelon = quelonry.modelonlOutputNamelon
    if (relonsponselon.containsOutputs(outputNamelon)) {
      val twelonelontList = relonsponselon.gelontOutputsMap
        .gelont(outputNamelon)
        .gelontInt64ValList.asScala
      twelonelontList.zip(twelonelontList.sizelon to 1 by -1).map { (twelonelontWithScorelon) =>
        TwelonelontWithScorelon(twelonelontWithScorelon._1, twelonelontWithScorelon._2.toLong)
      }
    } elonlselon {
      Selonq.elonmpty
    }
  }
}

objelonct ConsumelonrBaselondWalsSimilarityelonnginelon {
  caselon class Quelonry(
    sourcelonIds: Selonq[SourcelonInfo],
    modelonlNamelon: String,
    modelonlInputNamelon: String,
    modelonlOutputNamelon: String,
    modelonlSignaturelonNamelon: String,
    wilyNsNamelon: String,
  )

  delonf fromParams(
    sourcelonIds: Selonq[SourcelonInfo],
    params: configapi.Params,
  ): elonnginelonQuelonry[Quelonry] = {
    elonnginelonQuelonry(
      Quelonry(
        sourcelonIds,
        params(ConsumelonrBaselondWalsParams.ModelonlNamelonParam),
        params(ConsumelonrBaselondWalsParams.ModelonlInputNamelonParam),
        params(ConsumelonrBaselondWalsParams.ModelonlOutputNamelonParam),
        params(ConsumelonrBaselondWalsParams.ModelonlSignaturelonNamelonParam),
        params(ConsumelonrBaselondWalsParams.WilyNsNamelonParam),
      ),
      params
    )
  }

  delonf toSimilarityelonnginelonInfo(
    scorelon: Doublelon
  ): SimilarityelonnginelonInfo = {
    SimilarityelonnginelonInfo(
      similarityelonnginelonTypelon = SimilarityelonnginelonTypelon.ConsumelonrBaselondWalsANN,
      modelonlId = Nonelon,
      scorelon = Somelon(scorelon))
  }
}
